# C-Programming-and-Algorithmics-tasks

Part 1 of the course : C++ programming exercises/TP1 (Pointers on arrays)/: CMakeLists.txt  main.cpp  matrice.cpp  matrice.h
Part 1 of the course : C++ programming exercises/TP2 (STL, iterators, functors)/: CMakeLists.txt  eleve.cpp  eleve.h  main.cpp
Part 1 of the course : C++ programming exercises/TP3 (Inheritance, polymorphism)/: CMakeLists.txt  fonction.cpp  fonction.h  heritage.cpp
Part 2 of the course : Algorithmics exercises in C++/TP1 (Dynamic programming)/DELORO_TP1_Code/: CMakeLists.txt  distance.cpp
Part 2 of the course : Algorithmics exercises in C++/TP2 (Quadtrees)/DELORO_Code_Exo3/quadtree (1)/__MACOSX/: ._quadtree
Part 2 of the course : Algorithmics exercises in C++/TP2 (Quadtrees)/DELORO_Code_Exo3/quadtree (1)/quadtree/: example.cpp
Part 2 of the course : Algorithmics exercises in C++/TP2 (Quadtrees)/DELORO_Code_Exo3/villes1/__MACOSX/villes1/: ._README.txt  ._neighbors.h
Part 2 of the course : Algorithmics exercises in C++/TP2 (Quadtrees)/DELORO_Code_Exo3/villes1/villes1/: CMakeLists.txt  example.cpp  neighbors.h  quadrant.cpp  quadrant.h  quadtree.h  square.cpp  square.h
Part 2 of the course : Algorithmics exercises in C++/TP3 (Sets & maps)/villes2/__MACOSX/villes2/: ._README.txt  ._villes.txt
Part 2 of the course : Algorithmics exercises in C++/TP3 (Sets & maps)/villes2/villes2/: isotopo.cpp  point2d.cpp  point2d.h  town.cpp  town.h  villes2.txt
